--- a/lab-05.Rmd
+++ b/lab-05.Rmd
@@ -3,17 +3,13 @@ title: "Lab 05 - Nobel laureates"
 output: github_document
   
 ---
-Team Name:
+Team Name: DS5
 
 Team Members - Name and Student ID
 
-1.
+1. Ryam Radi 
+ID. 2201001476
 
-2.
-
-3.
-
-4.
 
 
 
@@ -41,7 +37,9 @@ nobel <- read_csv("data/nobel.csv")
 ## Get to know your data
 
 1.  How many observations and how many variables are in the dataset? Use inline code to answer this question. What does each row represent?
-
+Observation: 953
+Variables: 26
+each row reprenst information about a nobel prize winner.
 
 ```{r}
 dim(nobel)
